--- a/portofolio/css/style.css
+++ b/portofolio/css/style.css
@@ -874,3 +874,8 @@ h1, h2, h3, h4, h5, h6 {
     /* Firefox 18- */
     color: #ccc;
     font-style: italic; }
+
+.img-full {
+  width: 100%;
+  height: auto;
+}
